--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<section id="home" class="hero">
+    <div class="container">
+        <h1>¡Bienvenidos al proyecto de estadía!</h1>
+    </div>
+</section>
+
