--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,2 +1,19 @@
-<p>navbar works!</p>
-<button (click)="irHome()">Home</button>
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+       <span style="width: 30%;">
+        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active"><img src="https://image.flaticon.com/icons/svg/2641/2641405.svg" width="50px" alt=""> Estadía </a>
+       </span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 62%;">
+          <ul class="navbar-nav">
+            <li class="nav-item active" *ngFor="let area of areas">
+              <a class="nav-link" [routerLink]="area.path" routerLinkActive="router-link-active" >{{area.nombre}}
+                <img *ngIf="area.nombre === 'Login'" src="https://image.flaticon.com/icons/svg/1828/1828506.svg" width="20px" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+</div>
