--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,3 +14,9 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     margin: 0;
    }
+  
+   .hero button{
+    margin-top: 2%;
+    margin-left: 9%;
+    width: 27%;
+   }
