--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,21 +5,34 @@
     </div>
 </section>
 
-<section id="begin" *ngIf="comenzar">
-    <div class="container">
-        <h1>Seccion 1</h1>
-        <button type="button" class="btn btn-danger btn-lg" (click)="back2begin()">Regresar</button>
+<section id="begin" *ngIf="comenzar" class="who">
+    <div class="container-lg" style="padding-top: 1%;" *ngFor="let seccion of secciones">
+        <div class="card mb-3" style="max-width: 100%;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img [src]=seccion.img class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">{{seccion.title}}</h5>
+                  <p class="card-text">{{seccion.description}}</p>
+                  <button type="button" [ngClass]="seccion.class" (click)="knowMore(seccion.id)">Conocer mas</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 </section>
-<section id="begin" *ngIf="comenzar">
-    <div class="container">
-        <h1>Seccion 2</h1>
-        <button type="button" class="btn btn-danger btn-lg" (click)="back2begin()">Regresar</button>
+
+<div class="container-fluid" *ngIf="comenzar">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button"  class="btn btn-dark text-white btn-lg btn-block" (click)="back2begin()">Regresar</button>
+        </div>
+        <div class="col-md-4" > <br> </div>
     </div>
-</section>
-<section id="begin" *ngIf="comenzar">
-    <div class="container">
-        <h1>Seccion 3</h1>
-        <button type="button" class="btn btn-danger btn-lg" (click)="back2begin()">Regresar</button>
-    </div>
-</section>
+</div>
+
+
+
