Adding about pages

--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container-fluid sticky-top ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-white rounded">
        <span style="width: 30%;">
         <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active"><img src="https://image.flaticon.com/icons/svg/2641/2641405.svg" width="50px" alt=""> Estadía </a>
        </span>
