--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid sticky-top ">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-white rounded">
        <span style="width: 30%;">
-        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active"><img src="https://image.flaticon.com/icons/svg/2641/2641405.svg" width="50px" alt=""> Estadía </a>
+        <a class="navbar-brand click" (click)="Home()"><img src="https://image.flaticon.com/icons/svg/2641/2641405.svg" width="50px" alt=""> Estadía </a>
        </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
