--- a/src/app/pages/about-who/about-who.component.html
+++ b/src/app/pages/about-who/about-who.component.html
@@ -1,1 +1,53 @@
-<p>about-who works!</p>
+<div class="container-fluid"> 
+    <h1 class="text-center">Autor</h1>
+    <div class="row">
+       <!-- <div class="col-md-2"></div>
+       <div class="col-md-8">
+        <div class="jumbotron">
+            <h1 class="display-4">Autor</h1>
+            <img class="rounded float-left" width="200px" src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.0-9/83649943_3848989165111543_796889623669243904_n.jpg?_nc_cat=100&_nc_sid=7aed08&_nc_oc=AQn6LpeM81VXY61Aqsmz6mGiLjEmiO4YtUMwwFN6IEJHUeXLlI5Alyt4n_yEYvlg8Xo&_nc_ht=scontent-qro1-1.xx&oh=e4af31e99f6420fb0b195f73e69c0863&oe=5E906FB6" alt="">
+            <p class="lead">Francisco J. Moreno</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          </div>
+       </div>
+       <div class="col-md-2"></div> -->
+
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <!-- <div class="row">
+                <div class="col-md-2" >
+                    <img class="rounded float-left" width="200px" src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.0-9/83649943_3848989165111543_796889623669243904_n.jpg?_nc_cat=100&_nc_sid=7aed08&_nc_oc=AQn6LpeM81VXY61Aqsmz6mGiLjEmiO4YtUMwwFN6IEJHUeXLlI5Alyt4n_yEYvlg8Xo&_nc_ht=scontent-qro1-1.xx&oh=e4af31e99f6420fb0b195f73e69c0863&oe=5E906FB6" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <h2 class="text-center" style="padding-left: 2%;">Francisco J. Moreno</h2>
+                    </div>
+                    <span class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta aliquam magnam expedita inventore sint quaerat velit exercitationem eaque beatae itaque vel culpa officiis iusto, eum alias asperiores quos quas illum.</span>
+                </div>
+            </div> -->
+
+            <div class="media">
+                <img width="200px" src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.0-9/83649943_3848989165111543_796889623669243904_n.jpg?_nc_cat=100&_nc_sid=7aed08&_nc_oc=AQn6LpeM81VXY61Aqsmz6mGiLjEmiO4YtUMwwFN6IEJHUeXLlI5Alyt4n_yEYvlg8Xo&_nc_ht=scontent-qro1-1.xx&oh=e4af31e99f6420fb0b195f73e69c0863&oe=5E906FB6" class="align-self-start mr-3 rounded" alt="...">
+                <div class="media-body">
+                  <h5 class="mt-0">Francisco J. Moreno</h5>
+                  <h6 class="mt-0 font-weight-light">Frontend Jr.</h6>
+                  <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                  <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                </div>
+              </div>
+            
+        </div>
+        <div class="col-md-2"></div>
+    </div> 
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button"  class="btn btn-dark text-white btn-lg btn-block animated fadeInUp" (click)="back2begin()">Regresar</button>
+        </div>
+        <div class="col-md-4" > <br> </div>
+    </div>
+</div>
