--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                   <h5 class="card-title">{{seccion.title}}</h5>
                   <p class="card-text">{{seccion.description}}</p>
-                  <button type="button" [ngClass]="seccion.class" (click)="knowMore(seccion.id)">Conocer mas</button>
+                  <button type="button" [ngClass]="seccion.class" (click)="knowMore(seccion.id)">Conocer más</button>
                 </div>
               </div>
             </div>
