about-what content

--- a/src/app/pages/about-what/about-what.component.html
+++ b/src/app/pages/about-what/about-what.component.html
@@ -1,1 +1,28 @@
-<p>about-what works!</p>
+<div class="container-fluid animated fadeIn"> 
+    <h1 class="text-center">{{'¿De qué trata?' | uppercase}}</h1>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <div class="media">
+            
+                <div class="media-body">
+                  <h5 class="mt-0">Francisco J. Moreno</h5>
+                  <h6 class="mt-0 font-weight-light">Frontend Jr.</h6>
+                  <p>Soy estudiante de la Universidad Tecnológica de Santa Catarina y Desarrollador Frontend Jr. Tengo 20 años y soy entusiasta de la ciberseguridad. Originario de Monterrey, Nuevo León. Apasionado de las tecnologías y de siempre aprender algo nuevo.</p>
+                </div>
+                
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+<br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button"  class="btn btn-dark text-white btn-lg btn-block animated fadeInUp" (click)="back2begin()">Regresar</button>
+        </div>
+        <div class="col-md-4" > <br> </div>
+    </div>
+</div>
