--- a/src/app/pages/about-who/about-who.component.html
+++ b/src/app/pages/about-who/about-who.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid"> 
+<div class="container-fluid animated fadeIn"> 
     <h1 class="text-center">{{title | uppercase}}</h1>
     <div class="row">
         <div class="col-md-2"></div>
