--- a/src/app/pages/about-what/about-what.component.html
+++ b/src/app/pages/about-what/about-what.component.html
@@ -3,15 +3,96 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <div class="media">
-            
-                <div class="media-body">
-                  <h5 class="mt-0">Francisco J. Moreno</h5>
-                  <h6 class="mt-0 font-weight-light">Frontend Jr.</h6>
-                  <p>Soy estudiante de la Universidad Tecnológica de Santa Catarina y Desarrollador Frontend Jr. Tengo 20 años y soy entusiasta de la ciberseguridad. Originario de Monterrey, Nuevo León. Apasionado de las tecnologías y de siempre aprender algo nuevo.</p>
+            <br>
+                <div class="text-center">
+                  <h5>Este proyecto trata de englobar un desarrollo de una aplicación web en el mundo real, contando con:</h5><br>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="list-group" id="list-tab" role="tablist">
+                        <a class="list-group-item list-group-item-action active list-group-item-secondary" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="welcome">Benvenida</a>
+                        <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="login">Login</a>
+                        <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="autenticacion">Roles</a>
+                        <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="autorizacion">Tokens</a>
+                      </div>
+                    </div>
+                    <div class="col-8">
+                      <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                 
+                          <div class="card mb-3" style="max-width: 600px; height: 200px;">
+                            <div class="row">
+                              <div class="col-md-6">
+                                <img src="https://cdn.lynda.com/course/648913/648913-637159311777648147-16x9.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                              </div>
+                              <div class="col-md-6">
+                                <div class="card-body">
+                                  <h5 class="card-title">Bienvenida</h5>
+                                  <p class="card-text">Una página de bienvenida que sirve para que el usuario se sienta cómodo desde el instante que entra a la aplicación.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                        </div>
+                        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+
+                            <div class="card mb-3" style="max-width: 600px; height: 200px;">
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <img src="https://cdn.lynda.com/course/360035/360035-637074619027572731-16x9.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                  </div>
+                                  <div class="col-md-6">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Login</h5>
+                                      <p class="card-text"> Un sistema de login conectado a una cloud database, con autenticación y autorización.</p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                           
+
+                        </div>
+                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                            <div class="card mb-3" style="max-width: 600px; height: 200px;">
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <img src="https://cdn.lynda.com/course/622061/622061-637085565526967754-16x9.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                  </div>
+                                  <div class="col-md-6">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Roles</h5>
+                                      <p class="card-text">  Por medio de la autenticación (¿Quién es?) se nos permitirá manejar distintas vistas para distintos roles de usuarios. En este caso serán usuario y administrador..</p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                          
+                        </div>
+                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                            <div class="card mb-3" style="max-width: 600px; height: 200px;">
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <img src="https://i.pinimg.com/originals/5c/fd/c7/5cfdc7ffa84f0dfe079934a41019ea62.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                  </div>
+                                  <div class="col-md-6">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Tokens</h5>
+                                      <p class="card-text"> Por medio de la autorización (¿Quién puede entrar?), en este caso usaremos los tokens, nos permitirá acceder a distintas páginas..</p>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                           
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
                 </div>
+              
                 
-            </div>
         </div>
         <div class="col-md-2"></div>
     </div>
