Adding login design

--- a/src/app/pages/about-what/about-what.component.html
+++ b/src/app/pages/about-what/about-what.component.html
@@ -39,7 +39,7 @@
                             <div class="card mb-3" style="max-width: 600px; height: 200px;">
                                 <div class="row">
                                   <div class="col-md-6">
-                                    <img src="https://cdn.lynda.com/course/360035/360035-637074619027572731-16x9.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                    <img src="https://cdn.lynda.com/course/360035/360035-637074619027572731-16x9.jpg" style=" height: 118%; width: 105%;" class="card-img" alt="...">
                                   </div>
                                   <div class="col-md-6">
                                     <div class="card-body">
@@ -57,12 +57,12 @@
                             <div class="card mb-3" style="max-width: 600px; height: 200px;">
                                 <div class="row">
                                   <div class="col-md-6">
-                                    <img src="https://cdn.lynda.com/course/622061/622061-637085565526967754-16x9.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                    <img src="https://cdn.lynda.com/course/622061/622061-637085565526967754-16x9.jpg" style=" height: 101%; width: 100%;" class="card-img" alt="...">
                                   </div>
                                   <div class="col-md-6">
                                     <div class="card-body">
                                       <h5 class="card-title">Roles</h5>
-                                      <p class="card-text">  Por medio de la autenticación (¿Quién es?) se nos permitirá manejar distintas vistas para distintos roles de usuarios. En este caso serán usuario y administrador..</p>
+                                      <p class="card-text">  Por medio de la autenticación se nos permitirá manejar distintas vistas para distintos roles de usuarios. En este caso serán usuario y administrador..</p>
                                     </div>
                                   </div>
                                 </div>
@@ -74,12 +74,12 @@
                             <div class="card mb-3" style="max-width: 600px; height: 200px;">
                                 <div class="row">
                                   <div class="col-md-6">
-                                    <img src="https://i.pinimg.com/originals/5c/fd/c7/5cfdc7ffa84f0dfe079934a41019ea62.jpg" style=" height: 115%; width: 105%;" class="card-img" alt="...">
+                                    <img src="https://cdn.lynda.com/static/landing/images/hero/PrepareForTheCiscoCertifiedNetworkAssociateCCNASecurityCertification_1200x630-1537979879452.jpg" style=" height: 133%; width: 100%;" class="card-img" alt="...">
                                   </div>
                                   <div class="col-md-6">
                                     <div class="card-body">
                                       <h5 class="card-title">Tokens</h5>
-                                      <p class="card-text"> Por medio de la autorización (¿Quién puede entrar?), en este caso usaremos los tokens, nos permitirá acceder a distintas páginas..</p>
+                                      <p class="card-text"> Por medio de la autorización se permitirá acceder a distintas páginas.</p>
                                     </div>
                                   </div>
                                 </div>
