--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,10 @@
-<h1>Login works!</h1>
+
+    <div class="card form" style="width: 18rem;">
+        <img src="https://image.flaticon.com/icons/svg/1828/1828466.svg" class="card-img-top rounded-circle loginImg" height="100px" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Iniciar Sesión</h5>
+          <input class="form-control user" [(ngModel)]="LoginForm.user" type="text" name="user" id="" placeholder="Usuario">
+          <input class="form-control pass" [(ngModel)]="LoginForm.pass" type="password" name="pass" id="" placeholder="Contraseña"> <br>
+          <button type="button" class="btn btn-secondary btn-block btn-lg" (click)="login(LoginForm.user, LoginForm.pass)">Ingresar</button>
+        </div>
+      </div>
