--- a/src/app/pages/about-what/about-what.component.html
+++ b/src/app/pages/about-what/about-what.component.html
@@ -9,7 +9,7 @@
                   <div class="row">
                     <div class="col-4">
                       <div class="list-group" id="list-tab" role="tablist">
-                        <a class="list-group-item list-group-item-action active list-group-item-secondary" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="welcome">Benvenida</a>
+                        <a class="list-group-item list-group-item-action active list-group-item-secondary" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="welcome">Bienvenida</a>
                         <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="login">Login</a>
                         <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="autenticacion">Roles</a>
                         <a class="list-group-item list-group-item-action  list-group-item-secondary" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="autorizacion">Tokens</a>
