Solo falta objetivos y tecnologías

--- a/src/app/pages/about-who/about-who.component.html
+++ b/src/app/pages/about-who/about-who.component.html
@@ -11,7 +11,7 @@
                   <p>Soy estudiante de la Universidad Tecnológica de Santa Catarina y Desarrollador Frontend Jr. Tengo 20 años y soy entusiasta de la ciberseguridad. Originario de Monterrey, Nuevo León. Apasionado de las tecnologías y de siempre aprender algo nuevo.</p>
                   <div class="row">
                       <div class="col-md-4">
-                        <p><a href="https://twitter.com/frxncismor" target="_blank" class="badge badge-info"><strong>Twitter</strong> @frxncismor </a></p>
+                        <!-- <p><a href="https://twitter.com/frxncismor" target="_blank" class="badge badge-info"><strong>Twitter</strong> @frxncismor </a></p> -->
                       </div>
                       <div class="col-md-4">
                         <p><a href="https://github.com/frxncismor?tab=repositories" target="_blank" class="badge badge-dark"><strong>Github</strong> @frxncismor </a></p>
