--- a/src/app/pages/unauth/unauth.component.scss
+++ b/src/app/pages/unauth/unauth.component.scss
@@ -1,19 +1,19 @@
 div {
-    background-color: #92CDED;
+    // background-color: #92CDED;
     min-height: 50vh;
     margin-top: -43px;
 }
 img{
-    padding: 0% 24% 0% 24%;
+    padding: 3% 43% 3% 45%;
+    height: 238px;
 }
 
 h1 {
     padding-left: 9%;
-    color: whitesmoke;
 }
 
 button{
-    margin-left: 36%;
+    margin-left: 38%;
     margin-top: 5%;
     margin-right: 24%;
     width: 27%;
