--- a/src/app/pages/unauth/unauth.component.html
+++ b/src/app/pages/unauth/unauth.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/socialmedia/apple/237/disappointed-face_1f61e.png" alt="">
+<div class="container-fluid animated fadeIn">
+    <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Sad_Face_Emoji_grande.png?v=1571606037" alt="">
     
    <h1>Lo lamentamos, no estás autorizado para ver esto</h1>
    <button type="button" class="btn btn-warning text-light btn-lg" [routerLink]="['/welcome/info']" routerLinkActive="router-link-active" >Volver</button>
