--- a/src/app/pages/unauthorized/unauthorized.component.html
+++ b/src/app/pages/unauthorized/unauthorized.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid animated fadeIn">
     <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/socialmedia/apple/237/disappointed-face_1f61e.png" alt="">
     
    <h1>Lo lamentamos, no estás autorizado para ver esto</h1>
