--- a/src/app/pages/welcome/admin/admin.component.html
+++ b/src/app/pages/welcome/admin/admin.component.html
@@ -1,6 +1,17 @@
-<div class="row">
-    <div class="col-md-12" >
-        <h5 class="text-center">Administrador</h5>
+<div class="container-fluid animated fadeIn">
+    <div class="row">
+        <div class="col-md-12" >
+            <h5 class="text-center">Administrador</h5>
+        </div>   
     </div>
-   
+    
+    <div class="row">
+        <div class="col-md-6">
+            <img src="https://image.flaticon.com/icons/svg/2331/2331925.svg" alt="">
+        </div>
+        <div class="col-md-6">
+            <h3 class="text-center text-success">¡Felicidades ahora eres un administrador!</h3>
+        </div>
+    </div>
+    
 </div>
