--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="auth.user$ | async as user" class="container">
+<div *ngIf="auth.user$ | async as user" class="container animated fadeIn">
 
     <div class="row">
         <div class="col-md-4">
